--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "transform": {
       "^.+\\.ts$": "ts-jest"
     },
+    "setupFiles": ["/home/drasync/ProfilingPromisesAnalysis/asyncHooks_require.js"],
     "moduleFileExtensions": [
       "ts",
       "js",
